welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:4: error: ';' expected but ')' found.
		{return 2*diff)}
                              ^